8148507: [JVMCI] mitigate deadlocks related to JVMCI compiler under -Xbatch

Reviewed-by: twisti, dholmes